--- a/shyft.html
+++ b/shyft.html
@@ -257,7 +257,7 @@
                 <img src="assets/img/shyft-6-2.png" alt="Image" style="width: auto; max-height: 80vh; margin: 5vmin 0px">
               </div>
             </div>
-
+hello
             <p class="heading">scheduling a ride</p>
             <div class="row align-items-center">
               <div class="col-sm-12 col-xl-7 order-xl-12">
