--- a/shyft.html
+++ b/shyft.html
@@ -179,6 +179,7 @@
               max-height: 5vw;
             }
           }
+            @media (min-width: 1368px) {
               img.detail-icon {
                 max-height: 5vw;
               }
