index shyft transloc

--- a/transloc.html
+++ b/transloc.html
@@ -12,7 +12,7 @@
       gtag('config', 'UA-151774559-1');
     </script>
     <meta charset="utf-8">
-    <title>Shyft</title>
+    <title>Transit App Refresh</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="A corporate Bootstrap theme by Medium Rare">
     <link href="assets/css/loaders/loader-typing.css" rel="stylesheet" type="text/css" media="all" />
@@ -25,7 +25,6 @@
     <style>
 /* text styling for responsive design - headings */
     p.heading {
-      background-color: #43c6ac;
       padding-left: 5vw;
       padding-top: 30vh;
       color: white;
@@ -65,7 +64,6 @@
 
 /* text styling for responsive design - details (left side of pics) */
     p.detail-left {
-      background-color: #43c6ac;;
       color: white;
       font-weight: bold;
       text-align: left;
@@ -105,7 +103,6 @@
 
     /* text styling for responsive design - details (right side of pics) */
         p.detail-right {
-          background-color: #43c6ac;;
           color: white;
           font-weight: bold;
           text-align: left;
@@ -149,7 +146,6 @@
 
     /* text styling for responsive design - icon */
         img.detail-icon {
-          background-color: #43c6ac;
           max-width: auto;
           padding-left: 5px;
         }
@@ -205,7 +201,7 @@
             }
 
 /* styling for first image */
-            @media (min-width: 200px) {
+            @media (min-width: 360px) {
               img.first {
                 width: auto;
                 max-height: 80vh;
@@ -221,6 +217,43 @@
               }
             }
 
+
+/* text styling for img labels */
+            p.figure-label {
+              color: white;
+              font-weight: bold;
+              text-align: center;
+            }
+            @media (max-width: 360px) {
+              p.figure-label {
+                font-size: 25px;
+              }
+            }
+            @media (min-width: 360px) {
+              p.figure-label {
+                font-size: 25px;
+              }
+            }
+            @media (min-width: 768px) {
+              p.figure-label {
+                font-size: 25px;
+              }
+            }
+            @media (min-width: 992px) {
+              p.figure-label {
+                font-size: 25px;
+              }
+            }
+            @media (min-width: 1200px) {
+              p.figure-label {
+                font-size: 25px;
+              }
+            }
+              @media (min-width: 1368px) {
+                p.figure-label {
+                  font-size: 30px;
+                }
+            }
 
     </style>
 
@@ -266,12 +299,12 @@
             <div class="row justify-content-center sticky-top">
               <div class="col-11">
                 <div class="mb-4">
-                  <h1>Shyft</h1>
+                  <h1>Transit App Refresh</h1>
                     <dl class="row">
                       <dt class="col-3 mb-2">Role</dt>
                       <dd class="col-9 mb-2">UX Designer, User Researcher</dd>
                       <dt class="col-3 mb-2">Client</dt>
-                      <dd class="col-9 mb-2">Elder Innovators of the Triangle</dd>
+                      <dd class="col-9 mb-2">North Carolina State University</dd>
                       <dt class="col-3 mb-2">Year</dt>
                       <dd class="col-9 mb-2">2019</dd>
                       <dt class="col-3 mb-2">Industry</dt>
@@ -280,15 +313,14 @@
                     </dl>
                   <h5>Background</h5>
                     <p>
-                      Ridesharing services have made getting around quick and easy, but this convenience isn’t without risks. Inadequate safety measures have led to dangerous and deadly situations, and accessibility concerns have been largely ignored. These problems compound with inadequate UX, leaving many users confused or with a bad experience. It’s time to rethink ridesharing.
+                      Public transportation offers many benefits for those living in congested areas like a city or college campus. When the route is well known, everything usually goes smoothly. However, what if your bus was late or you were visiting a new city? You might feel lost. Transloc<small><sup>&reg;</sup></small> is an existing app owned by Ford, and this graduate project served to explore potential improvements to Transloc's<small><sup>&reg;</sup></small> user experience.
                     </p>
                   <h5>Solution</h5>
                     <p>
-                      Shyft was designed with accessibility and safety at the forefront. Gone are the fancy and ineffective visuals of other apps; with Shyft, anybody can find the features they need. Everything from onboarding to arrival was designed from the ground up and tested with users. A focused UI with rich features delivers a delightful and functional user experience.
-                    </p>
+                      The redesign of Transloc<small><sup>&reg;</sup></small> was centered around simplifying the user experience and improving education of features. Tabs were more clearly defined and only the most used ones were kept (5 to 3). Reachability was improved by moving these tabs from top to the bottom of the screen. An informative onboarding experience was developed to inform users of all primary features.
                   <h5>Outcomes</h5>
                     <p>
-                      This project was delivered to faculty and students at North Carolina State University and members of the Experienced Innovators of the Triangle. It received positive feedback and all were able to use the app and navigate its features.
+                      This project was delivered to faculty and students at North Carolina State University and employees of Lexis Nexis. Experts in the field were complementary of the changes made and improved usability of Transloc<small><sup>&reg;</sup></small>.
                     </p>
                 </div>
 
@@ -313,55 +345,55 @@
 
 <!-- hero shots -->
 
-        <div class="col-sm-12 col-xl-8 order-xl-1" style="background-color:#43c6ac" align="middle">
+        <div class="col-sm-12 col-xl-8 order-xl-1" style="background-color:#235DCC" align="middle">
 
-          <img class="first" src="assets/img/shyft-1.gif">
+          <img class="first" src="assets/img/transloc-1.png">
 
             <p class="heading">onboarding</p>
-            <img src="assets/img/shyft-2.png" alt="Image" style="margin: 5vmin 0px">
+            <div class="row align-items-center">
+              <div class="col-sm-12 col-xl-7 order-xl-12">
+                <p class="detail-right">for the first time ever in Transloc<small><sub>&reg;</sub></small></p>
+                <p class="detail-right" style="color:#091733">clear and informative</p>
+              </div>
+              <div class="col-sm-12 col-xl-5 order-xl-1">
+                <img class="image-left" src="assets/img/transloc-2.gif">
+              </div>
+            </div>
 
             <p class="heading">homescreen</p>
+            <p class="detail-left" style="color:#091733">new and improved features</p>
             <div class="row align-items-center">
-              <div class="col-sm-12 col-xl-7 order-xl-12">
-                <p class="detail-right">user-inspired design</p>
-                <p class="detail-right" style="color:#0B4439">clean</p>
-                <p class="detail-right" style="color:#0B4439">legible</p>
-                <p class="detail-right" style="color:#0B4439">intuitive</p>
+              <div class="col-sm-12 col-xl-5">
+                <br>
+
+                <p class="detail-left">reachability</p>
+                <br>
+                <p class="detail-left">search bar</p>
+                <br>
+                <p class="detail-left">nav tray</p>
+                <br>
+                <p class="detail-left">weather</p>
+                <br>
               </div>
-              <div class="col-sm-12 col-xl-5 order-xl-1">
-                <img class="image-left" src="assets/img/shyft-3.png">
+              <div class="col-sm-12 col-xl-3">
+                <img src="assets/img/transloc-3-1.png" alt="Image" style="width: auto; max-height: 50vh; margin: 10px 0px">
+                <p class="figure-label">original</p>
+              </div>
+              <div class="col-sm-12 col-xl-4">
+                <img src="assets/img/transloc-3-2.png" alt="Image" style="width: auto; max-height: 70vh; margin: 5vmin 0px 10px 0px">
+                <p class="figure-label">refreshed</p>
               </div>
             </div>
 
-            <p class="heading">getting there</p>
-            <div class="row align-items-center">
-              <div class="col-sm-12 col-xl-4">
-                <br>
-                <p class="detail-left"><span><img class="detail-icon" src="assets/img/text.png"></span>text</p>
-                <br><br>
-                <p class="detail-left"><span><img class="detail-icon" src="assets/img/voice.png"></span>voice</p>
-              </div>
-              <div class="col-sm-12 col-xl-4">
-                <img src="assets/img/shyft-4-1.png" alt="Image" style="width: auto; max-height: 80vh; margin: 5vmin 0px">
-              </div>
-              <div class="col-sm-12 col-xl-4">
-                <img src="assets/img/shyft-4-2.png" alt="Image" style="width: auto; max-height: 80vh; margin: 5vmin 0px">
-              </div>
-            </div>
-
-            <p class="heading">accessibility</p>
+            <p class="heading">choosing routes</p>
             <div class="row align-items-center">
               <div class="col-sm-12 col-xl-7 order-xl-12">
-                <br>
-                <p class="detail-right">not the focus of most <br>ridesharing apps.</p>
-                <p class="detail-right" style="color:#0B4439">it should be.</p>
-                <br>
-                <p class="detail-right">logical groupings</p>
-                <p class="detail-right">customizable</p>
-                <p class="detail-right">driver training</p>
+                <p class="detail-right">a streamlined experience</p>
+                <p class="detail-right" style="color:#091733">fewer screens</p>
+                <p class="detail-right" style="color:#091733">preview route</p>
               </div>
               <div class="col-sm-12 col-xl-5 order-xl-1">
-                <img class="image-left" src="assets/img/shyft-5.png">
+                <img class="image-left" src="assets/img/transloc-3.gif">
               </div>
             </div>
 
@@ -369,55 +401,19 @@
             <div class="row align-items-center">
               <div class="col-sm-12 col-xl-4">
                 <br>
-                <p class="detail-left">easy access</p>
-                <br>
+                <p class="detail-left">route groupings</p>
                 <p class="detail-left">quick editing</p>
               </div>
               <div class="col-sm-12 col-xl-4">
-                <img src="assets/img/shyft-6-1.png" alt="Image" style="width: auto; max-height: 80vh; margin: 5vmin 0px">
+                <img src="assets/img/transloc-4-1.png" alt="Image" style="width: auto; max-height: 80vh; margin: 5vmin 0px">
               </div>
               <div class="col-sm-12 col-xl-4">
-                <img src="assets/img/shyft-6-2.png" alt="Image" style="width: auto; max-height: 80vh; margin: 5vmin 0px">
+                <img src="assets/img/transloc-4-2.png" alt="Image" style="width: auto; max-height: 80vh; margin: 5vmin 0px">
               </div>
             </div>
 
-            <p class="heading">scheduling a ride</p>
-            <div class="row align-items-center">
-              <div class="col-sm-12 col-xl-7 order-xl-12">
-                <br>
-                <p class="detail-right" style="color:#0B4439">less hidden buttons</p>
-                <p class="detail-right">simpler to schedule than competitors</p>
-              </div>
-              <div class="col-sm-12 col-xl-5 order-xl-1">
-                <img class="image-left" src="assets/img/shyft-7-1.png">
-              </div>
-            </div>
-            <div class="row align-items-center">
-              <div class="col-sm-12 col-xl-4">
-                <img src="assets/img/shyft-7-2.png" alt="Image" style="width: auto; max-height: 80vh; margin: 5vmin 0px">
-              </div>
-              <div class="col-sm-12 col-xl-4">
-                <img src="assets/img/shyft-7-3.png" alt="Image" style="width: auto; max-height: 80vh; margin: 5vmin 0px">
-              </div>
-              <div class="col-sm-12 col-xl-4">
-                <img src="assets/img/shyft-7-4.png" alt="Image" style="width: auto; max-height: 80vh; margin: 5vmin 0px">
-              </div>
-            </div>
 
-            <p class="heading">safety</p>
-            <div class="row align-items-center">
-              <div class="col-sm-12 col-xl-4">
-                <br>
-                <p class="detail-left" style="color:#0B4439">AI powered</p>
-                <br>
-                <p class="detail-left">never get in the wrong car</p>
-              </div>
-              <div class="col-sm-12 col-xl-8">
-                <img src="assets/img/shyft-8-1.png" alt="Image" style="width: auto; max-height: 80vh; margin: 5vmin 0px">
-              </div>
-            </div>
-
-            <img src="assets/img/shyft-9.png" alt="Image" style="margin: 30vh 0vh; width:auto; max-height:40vh;">
+            <img src="assets/img/transloc-5.png" alt="Image" style="margin: 30vh 0vh; width:auto; max-height:40vh;">
 
           </div>
         </div>
