--- a/index.html
+++ b/index.html
@@ -66,16 +66,16 @@
         <div class="row">
           <div class="col-sm-6 col-lg-4 mb-4">
             <a href="shyft.html">
-              <img src="assets/img/portfolio-item-1.png" alt="Shyft" class="rounded mb-3">
+              <img src="assets/img/portfolio-item-1.png" class="rounded mb-3">
             </a>
-            <a href="#">
+            <a href="shyft.html">
               <h4 class="mb-1">Shyft</h4>
               <div class="text-small text-muted">Technology</div>
             </a>
           </div>
           <div class="col-sm-6 col-lg-4 mb-4">
             <a href="#">
-              <img src="assets/img/portfolio-item-2.png" alt="Oculus Go" class="rounded mb-3">
+              <img src="assets/img/portfolio-item-2.png" class="rounded mb-3">
             </a>
             <a href="#">
               <h4 class="mb-1">Score Report</h4>
@@ -83,11 +83,11 @@
             </a>
           </div>
           <div class="col-sm-6 col-lg-4 mb-4">
-            <a href="#">
-              <img src="assets/img/portfolio-item-3.png" alt="Beker EV" class="rounded mb-3">
+            <a href="transloc.html">
+              <img src="assets/img/portfolio-item-3.png" class="rounded mb-3">
             </a>
-            <a href="#">
-              <h4 class="mb-1">TransLoc</h4>
+            <a href="transloc.html">
+              <h4 class="mb-1">Transit App</h4>
               <div class="text-small text-muted">Redesign</div>
             </a>
           </div>
